Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-62841

QFileSystemModel: Crash when monitoring directory with activity (temp)

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.9.4
    • 5.9.1
    • Widgets: Itemviews
    • None
    • Windows 10 64bit, MSVC2017 64
    • 77687bc64e9ae7172586271de91b266be7ab19ce (qtbase/5.9, 5.12.2017, 5.9.4)

      • Launch something that causes activity in the temporary directory, fex a build of Qt
      • Launch examples\widgets\itemviews\dirview and point to temp dir
      • Observe crash (multiple asserts "QList<T>::at", char * what = 0x00000000`7562f360 "index out of range")

        1. qtbug62841_stack.txt
          19 kB
          Friedemann Kleint
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            kleint Friedemann Kleint
            kleint Friedemann Kleint
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes